--- a/index.html
+++ b/index.html
@@ -442,11 +442,11 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<ul class="icons">
 					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="https://www.facebook.com/tresdelab/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 					<!--
                     <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 					-->
-                    <li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+                    <li><a href="mailto:tresdelab@covi-sas.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Untitled</li><li>Design: <a href="">DaTeCru</a></li>
