--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/fulls/1.jpg" class="image fit thumb"><img src="images/thumbs/1.jpg" alt="" /></a>
 								<h3>Hand Glider</h3>
-								<p>Diseña tus juguetes y divierte con ellos.</p>
+								<p>Diseña tus juguetes y diviertete con ellos.</p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/fulls/2.jpg" class="image fit thumb"><img src="images/thumbs/2.jpg" alt="" /></a>
@@ -81,7 +81,7 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Contactenos</h2>
-						<p>Dejenos su mensaje y les responderemos en breve</p>
+						<p>Déjenos su mensaje y les responderemos en breve</p>
 						<div class="row">
 							<div class="8u 12u$(small)">
 								<form method="post" action="#">
