--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 						<header class="major">
 							<h2>Tan facil como<br />
 							 Crear, Cotizar e Imprimir</h2>
+							 <img src="images/Tresdelab.jpg" alt="" />
 						</header>
 						<p>ESTAMOS EN MANTENIMIENTO</p>
 						<ul class="actions">
