--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<a href="#" class="image avatar"><img src="images/Tresdelab.jpg" alt="" /></a>
 				<h1><strong>tresdelab</strong>, es una empresa<br />
 				online dedicada a la impresion 3D<br />
-				establecida en Ciudad Juárez.</h1>
+				establecida en Ciudad Juárez, México.</h1>
 			</header>
 
 		<!-- Main -->
@@ -29,9 +29,9 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
+							<img src="images/Tresdelab1.jpg" alt="" align="right" height="55.2" width="273.6"/>
 							<h2>Tan facil como<br />
 							 Crear, Cotizar e Imprimir</h2>
-							 <img src="images/Tresdelab1.jpg" alt="" />
 						</header>
 						<p>ESTAMOS EN MANTENIMIENTO</p>
 						<ul class="actions">
