--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<img src="images/Tresdelab1.jpg" alt="" align="right" height="55.2" width="273.6"/><br />
+							<img src="images/Tresdelab1.jpg" alt="" align="right" height="55.2" width="273.6"/>
+							<br />
+							<br />
 							<h2>Tan facil como<br />
 							 Crear, Cotizar e Imprimir</h2>
 						</header>
