--- a/index.html
+++ b/index.html
@@ -445,8 +445,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="https://www.facebook.com/tresdelab/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="https://www.instagram.com/tresdelab/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 					<!--
                     <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 					-->
