--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 						<p>Déjenos su mensaje y les responderemos en breve</p>
 						<div class="row">
 							<div class="8u 12u$(small)">
-								<form method="post" action=mailto:"tresdelab@covi-sas.com">
+								<form method="post" action="mailto:tresdelab@covi-sas.com">
 									<div class="row uniform 50%">
 										<div class="6u 12u$(xsmall)"><input type="text" name="name" id="name" placeholder="Nombre" /></div>
 										<div class="6u$ 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
