--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 							<i class="fa fa-laptop"></i>
 						</span>
 						<h3>Diseño de Paginas Web</h3>
-						<p>Ponte en contacto con nuestro personal para crear una página web echa para tus necesidades.</p>
+						<p>Ponte en contacto con nuestro personal para crear una página web hecha para tus necesidades.</p>
 						<p><a href="#" class="btn btn-primary btn-outline">leer más...</a></p>
 					</div>
 				</div>
