--- a/servicios.html
+++ b/servicios.html
@@ -3,11 +3,11 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Shop &mdash; Free Website Template, Free HTML5 Template by gettemplates.co</title>
+	<title>Tresdelab-Servicios</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by gettemplates.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="gettemplates.co" />
+	<meta name="description" content="es una empresa online dedicada a fotografia y grabación aerea, ademas de impresion 3D, corte laser y desarrollo de paginas web establecida en Ciudad Juárez." />
+	<meta name="keywords" content="3d print, lasercut, web design, aerial photography" />
+	<meta name="author" content="DaTeCru & Tresdelab" />
 
 	<!-- 
 	//////////////////////////////////////////////////////
@@ -60,7 +60,8 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
-
+        <link rel="icon" type="image/png" href="images/favicon.png">
+        <link rel="stylesheet" href="css/font-awesome.min.css">
 	</head>
 	<body>
 		
@@ -71,56 +72,59 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3 col-xs-2">
-					<div id="fh5co-logo"><a href="index.html">Shop.</a></div>
+					<div id="fh5co-logo"><a href="index.html"><img src="images/Tresdelab1.jpg" alt="" width="70%" height="70%"/></a></div>
 				</div>
 				<div class="col-md-6 col-xs-6 text-center menu-1">
 					<ul>
+						<!li class="has-dropdown">
+							<!a href="product.html"><!Shop<!/a>
+							<!ul class="dropdown">
+								<!li><!a href="single.html"><!Single Shop<!/a><!/li>
+							<!/ul>
+						<!/li>
+                        <li><a href="nosotros.html">Nosotros</a></li>
+                        <li><a href="clientes.html">Clientes</a>
+						</li>
+						<!li><!a href="about.html"><!About<!/a><!/li>
 						<li class="has-dropdown">
-							<a href="product.html">Shop</a>
+							<a href="servicios.html">Servicios</a>
 							<ul class="dropdown">
-								<li><a href="single.html">Single Shop</a></li>
+								<li><a href="#">Fotografia aerea</a></li>
+								<li><a href="#">Impresion 3D y Corte laser</a></li>
+								<li><a href="#">Diseño de Paginas web</a></li>
+								
 							</ul>
 						</li>
-						<li><a href="about.html">About</a></li>
-						<li class="has-dropdown active">
-							<a href="services.html">Services</a>
-							<ul class="dropdown">
-								<li><a href="#">Web Design</a></li>
-								<li><a href="#">eCommerce</a></li>
-								<li><a href="#">Branding</a></li>
-								<li><a href="#">API</a></li>
-							</ul>
-						</li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a href="contacto.html">Contacto</a></li>
 					</ul>
 				</div>
-				<div class="col-md-3 col-xs-4 text-right hidden-xs menu-2">
-					<ul>
-						<li class="search">
-							<div class="input-group">
-						      <input type="text" placeholder="Search..">
-						      <span class="input-group-btn">
-						        <button class="btn btn-primary" type="button"><i class="icon-search"></i></button>
-						      </span>
-						    </div>
-						</li>
-						<li class="shopping-cart"><a href="#" class="cart"><span><small>0</small><i class="icon-shopping-cart"></i></span></a></li>
-					</ul>
-				</div>
+				<!div class="col-md-3 col-xs-4 text-right hidden-xs menu-2">
+					<!ul>
+						<!li class="search">
+							<!div class="input-group">
+						      <!input type="text" placeholder="Search..">
+						      <!span class="input-group-btn">
+						        <!button class="btn btn-primary" type="button"><!i class="icon-search"><!/i><!/button>
+						      <!/span>
+						    <!/div>
+						<!/li>
+						<!li class="shopping-cart"><!a href="#" class="cart"><!span><!small><!0<!/small><!i class="icon-shopping-cart"><!/i><!/span><!/a><!/li>
+					<!/ul>
+				<!/div>
 			</div>
 			
 		</div>
 	</nav>
 
-	<header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(images/img_bg_2.jpg);">
+	<header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(images/william-iven.jpg);">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Services</h1>
-							<h2>Free html5 templates Made by <a href="http://freehtml5.co" target="_blank">freehtml5.co</a></h2>
+							<h1>Servicios</h1>
+							<h2>TRESDELAB una empresa con ideas diferentes</h2>
 						</div>
 					</div>
 				</div>
@@ -134,63 +138,63 @@
 				<div class="col-md-4 col-sm-4 text-center">
 					<div class="feature-center animate-box" data-animate-effect="fadeIn">
 						<span class="icon">
-							<i class="icon-credit-card"></i>
+							<i class="fa fa-video-camera"></i>
 						</span>
-						<h3>Credit Card</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
-						<p><a href="#" class="btn btn-primary btn-outline">Learn More</a></p>
+						<h3>Fotografía y Grabación Aérea</h3>
+						<p>Contamos con equipo para grabación de alta definición "1440p" y Fotografías 4K, además de pilotos con más de 10 años de experiencia para videos en las peores condiciones para volar</p>
+						<p><a href="#" class="btn btn-primary btn-outline">Leer más</a></p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4 text-center">
 					<div class="feature-center animate-box" data-animate-effect="fadeIn">
 						<span class="icon">
-							<i class="icon-wallet"></i>
+							<i class="fa fa-print"></i>
 						</span>
-						<h3>Save Money</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
-						<p><a href="#" class="btn btn-primary btn-outline">Learn More</a></p>
+						<h3>Impresión 3D</h3>
+						<p>Nuestras impresoras cuentan con una calidad de 100 micrones además de un área de impresión de 150mm x 150mm x 200mm en las que podrán realizar gran variedad de prototipos o productos para cualquier fin </p>
+						<p><a href="#" class="btn btn-primary btn-outline">Leer más</a></p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4 text-center">
 					<div class="feature-center animate-box" data-animate-effect="fadeIn">
 						<span class="icon">
-							<i class="icon-paper-plane"></i>
+							<i class="fa fa-laptop"></i>
 						</span>
-						<h3>Free Delivery</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
-						<p><a href="#" class="btn btn-primary btn-outline">Learn More</a></p>
+						<h3>Diseño de Páginas Web</h3>
+						<p>Escoge entre nuestros diferentes planes y templates para decidir la mejor página web acorde a tus necesidades, además de la posibilidad de una membresía mensual para el mantenimiento y actualización continua de tu página web</p>
+						<p><a href="#" class="btn btn-primary btn-outline">Leer más</a></p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4 text-center">
 					<div class="feature-center animate-box" data-animate-effect="fadeIn">
 						<span class="icon">
-							<i class="icon-calendar"></i>
+							<i class="fa fa-pencil"></i>
 						</span>
-						<h3>Lifetime Warranty</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
-						<p><a href="#" class="btn btn-primary btn-outline">Learn More</a></p>
+						<h3>Corte y Gravado laser</h3>
+						<p>Próximamente....</p>
+						<p><a href="#" class="btn btn-primary btn-outline">Leer más</a></p>
 					</div>
 				</div>
-				<div class="col-md-4 col-sm-4 text-center">
-					<div class="feature-center animate-box" data-animate-effect="fadeIn">
-						<span class="icon">
-							<i class="icon-clapperboard"></i>
-						</span>
-						<h3>Branded Model</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
-						<p><a href="#" class="btn btn-primary btn-outline">Learn More</a></p>
-					</div>
-				</div>
-				<div class="col-md-4 col-sm-4 text-center">
-					<div class="feature-center animate-box" data-animate-effect="fadeIn">
-						<span class="icon">
-							<i class="icon-drive"></i>
-						</span>
-						<h3>Affordable</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
-						<p><a href="#" class="btn btn-primary btn-outline">Learn More</a></p>
-					</div>
-				</div>
+				<!div class="col-md-4 col-sm-4 text-center">
+					<!div class="feature-center animate-box" data-animate-effect="fadeIn">
+						<!span class="icon">
+							<!i class="icon-clapperboard"><!/i>
+						<!/span>
+						<!h3><!Branded Model<!/h3>
+						<!p><!Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove<!/p>
+						<!p><!a href="#" class="btn btn-primary btn-outline"><!Learn More<!/a><!/p>
+					<!/div>
+				<!/div>
+				<!div class="col-md-4 col-sm-4 text-center">
+					<!div class="feature-center animate-box" data-animate-effect="fadeIn">
+						<!span class="icon">
+							<!i class="icon-drive"><!/i>
+						<!/span>
+						<!h3><!Affordable<!/h3>
+						<!p><!Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove<!/p>
+						<!p><!a href="#" class="btn btn-primary btn-outline"><!Learn More<!/a><!/p>
+					<!/div>
+				<!/div>
 			</div>
 		</div>
 	</div>
@@ -199,8 +203,8 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Newsletter</h2>
-					<p>Just stay tune for our latest Product. Now you can subscribe</p>
+					<h2>Noticias</h2>
+					<p>Subscribite para recibir muestras de nuestros últimos trabajos y así pedir el tuyo</p>
 				</div>
 			</div>
 			<div class="row animate-box">
@@ -213,7 +217,7 @@
 							</div>
 						</div>
 						<div class="col-md-6 col-sm-6">
-							<button type="submit" class="btn btn-default btn-block">Subscribe</button>
+							<button type="submit" class="btn btn-default btn-block">Subscribete</button>
 						</div>
 					</form>
 				</div>
@@ -225,52 +229,51 @@
 		<div class="container">
 			<div class="row row-pb-md">
 				<div class="col-md-4 fh5co-widget">
-					<h3>Shop.</h3>
-					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
+					<h3>Tresdelab</h3>
+					<p>Somos una empresa joven apuntando hacia el futuro, ayudando a nuestros clientes a ver el mundo diferente.</p>
 				</div>
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
 					<ul class="fh5co-footer-links">
-						<li><a href="#">About</a></li>
-						<li><a href="#">Help</a></li>
-						<li><a href="#">Contact</a></li>
-						<li><a href="#">Terms</a></li>
-						<li><a href="#">Meetups</a></li>
+						<li><a href="nosotros.html">Nosotros</a></li>
+						<li><a href="clientes.html">Clientes</a></li>
+						<li><a href="servicios.html">Servicios</a></li>
+						<li><a href="contacto.html">Contacto</a></li>
+						<!li><!a href="#"><!Meetups<!/a><!/li>
 					</ul>
 				</div>
 
-				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
-					<ul class="fh5co-footer-links">
-						<li><a href="#">Shop</a></li>
-						<li><a href="#">Privacy</a></li>
-						<li><a href="#">Testimonials</a></li>
-						<li><a href="#">Handbook</a></li>
-						<li><a href="#">Held Desk</a></li>
-					</ul>
-				</div>
+				<!div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
+					<!ul class="fh5co-footer-links">
+						<!li><!a href="#"><!Shop<!/a><!/li>
+						<!li><!a href="#"><!Privacy<!/a><!/li>
+						<!li><!a href="#"><!Testimonials<!/a><!/li>
+						<!li><!a href="#"><!Handbook<!/a><!/li>
+						<!li><!a href="#"><!Held Desk<!/a><!/li>
+					<!/ul>
+				<!/div>
 
-				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
-					<ul class="fh5co-footer-links">
-						<li><a href="#">Find Designers</a></li>
-						<li><a href="#">Find Developers</a></li>
-						<li><a href="#">Teams</a></li>
-						<li><a href="#">Advertise</a></li>
-						<li><a href="#">API</a></li>
-					</ul>
-				</div>
+				<!div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
+					<!ul class="fh5co-footer-links">
+						<!li><!a href="#"><!Find Designers<!/a><!/li>
+						<!li><!a href="#"><!Find Developers<!/a><!/li>
+						<!li><!a href="#"><!Teams<!/a><!/li>
+						<!li><!a href="#"><!Advertise<!/a><!/li>
+						<!li><!a href="#"><!API<!/a><!/li>
+					<!/ul>
+				<!/div>
 			</div>
 
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
-						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://blog.gessato.com/" target="_blank">Gessato</a> &amp; <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
+						<small class="block">&copy; 2017 DATECRU HTML5. All Rights Reserved.</small> 
+						<small class="block">Designed by <a href="http://www.tresdelab.com/" target="_blank">DaTeCru & Tresdelab</a></small>
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
 							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
+							<li><a href="https://www.facebook.com/tresdelab"><i class="icon-facebook"></i></a></li>
+							<li><a href="https://www.instagram.com/tresdelab/"><i class="icon-instagram"></i></a></li>
 						</ul>
 					</p>
 				</div>
