--- a/contacto.html
+++ b/contacto.html
@@ -3,11 +3,11 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Shop &mdash; Free Website Template, Free HTML5 Template by gettemplates.co</title>
+	<title>Tresdelab-Contacto</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by gettemplates.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="gettemplates.co" />
+	<meta name="description" content="es una empresa online dedicada a fotografia y grabación aerea, ademas de impresion 3D, corte laser y desarrollo de paginas web establecida en Ciudad Juárez." />
+	<meta name="keywords" content="3d print, lasercut, web design, aerial photography" />
+	<meta name="author" content="DaTeCru & Tresdelab" />
 
 	<!-- 
 	//////////////////////////////////////////////////////
@@ -61,7 +61,8 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
-
+        <link rel="icon" type="image/png" href="images/favicon.png">
+        <link rel="stylesheet" href="css/font-awesome.min.css">
 	</head>
 	<body>
 		
@@ -72,56 +73,59 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3 col-xs-2">
-					<div id="fh5co-logo"><a href="index.html">Shop.</a></div>
+					<div id="fh5co-logo"><a href="index.html"><img src="images/Tresdelab1.jpg" alt="" width="70%" height="70%"/></a></div>
 				</div>
 				<div class="col-md-6 col-xs-6 text-center menu-1">
 					<ul>
+						<!li class="has-dropdown">
+							<!a href="product.html"><!Shop<!/a>
+							<!ul class="dropdown">
+								<!li><!a href="single.html"><!Single Shop<!/a><!/li>
+							<!/ul>
+						<!/li>
+                        <li><a href="nosotros.html">Nosotros</a></li>
+                        <li><a href="clientes.html">Clientes</a>
+						</li>
+						<!li><!a href="about.html"><!About<!/a><!/li>
 						<li class="has-dropdown">
-							<a href="product.html">Shop</a>
+							<a href="servicios.html">Servicios</a>
 							<ul class="dropdown">
-								<li><a href="single.html">Single Shop</a></li>
+								<li><a href="#">Fotografia aerea</a></li>
+								<li><a href="#">Impresion 3D y Corte laser</a></li>
+								<li><a href="#">Diseño de Paginas web</a></li>
+								
 							</ul>
 						</li>
-						<li><a href="about.html">About</a></li>
-						<li class="has-dropdown">
-							<a href="services.html">Services</a>
-							<ul class="dropdown">
-								<li><a href="#">Web Design</a></li>
-								<li><a href="#">eCommerce</a></li>
-								<li><a href="#">Branding</a></li>
-								<li><a href="#">API</a></li>
-							</ul>
-						</li>
-						<li class="active"><a href="contact.html">Contact</a></li>
+						<li><a href="contacto.html">Contacto</a></li>
 					</ul>
 				</div>
-				<div class="col-md-3 col-xs-4 text-right hidden-xs menu-2">
-					<ul>
-						<li class="search">
-							<div class="input-group">
-						      <input type="text" placeholder="Search..">
-						      <span class="input-group-btn">
-						        <button class="btn btn-primary" type="button"><i class="icon-search"></i></button>
-						      </span>
-						    </div>
-						</li>
-						<li class="shopping-cart"><a href="#" class="cart"><span><small>0</small><i class="icon-shopping-cart"></i></span></a></li>
-					</ul>
-				</div>
+				<!div class="col-md-3 col-xs-4 text-right hidden-xs menu-2">
+					<!ul>
+						<!li class="search">
+							<!div class="input-group">
+						      <!input type="text" placeholder="Search..">
+						      <!span class="input-group-btn">
+						        <!button class="btn btn-primary" type="button"><!i class="icon-search"><!/i><!/button>
+						      <!/span>
+						    <!/div>
+						<!/li>
+						<!li class="shopping-cart"><!a href="#" class="cart"><!span><!small><!0<!/small><!i class="icon-shopping-cart"><!/i><!/span><!/a><!/li>
+					<!/ul>
+				<!/div>
 			</div>
 			
 		</div>
 	</nav>
 
-	<header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(images/img_bg_2.jpg);">
+	<header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(images/joanna-kosinska.jpg);">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Contact Us</h1>
-							<h2>Free html5 templates Made by <a href="http://freehtml5.co" target="_blank">freehtml5.co</a></h2>
+							<h1>Contactanos</h1>
+							<h2>TRESDELAB una empresa a disposición de sus clientes</h2>
 						</div>
 					</div>
 				</div>
@@ -135,52 +139,52 @@
 				<div class="col-md-5 col-md-push-1 animate-box">
 					
 					<div class="fh5co-contact-info">
-						<h3>Contact Information</h3>
+						<h3>Información de Contacto</h3>
 						<ul>
-							<li class="address">198 West 21th Street, <br> Suite 721 New York NY 10016</li>
-							<li class="phone"><a href="tel://1234567920">+ 1235 2355 98</a></li>
-							<li class="email"><a href="mailto:info@yoursite.com">info@yoursite.com</a></li>
-							<li class="url"><a href="http://gettemplates.co">gettemplates.co</a></li>
+							<li class="address">Ciudad Juárez, Chihuahua,<br> México </li>
+							<li class="phone"><a href="tel://+526569623200">+52 656 962 3200</a></li>
+							<li class="email"><a href="mailto:tresdelab@covi-sas.com">tresdelab@covi-sas.com</a></li>
+							<li class="url"><a href="http://www.facebook.com/tresdelab">Tresdelab</a></li>
 						</ul>
 					</div>
 
 				</div>
 				<div class="col-md-6 animate-box">
-					<h3>Get In Touch</h3>
+					<h3>Mantente en Contacto</h3>
 					<form action="#">
 						<div class="row form-group">
 							<div class="col-md-6">
 								<!-- <label for="fname">First Name</label> -->
-								<input type="text" id="fname" class="form-control" placeholder="Your firstname">
+								<input type="text" id="fname" class="form-control" placeholder="Nombre">
 							</div>
 							<div class="col-md-6">
 								<!-- <label for="lname">Last Name</label> -->
-								<input type="text" id="lname" class="form-control" placeholder="Your lastname">
+								<input type="text" id="lname" class="form-control" placeholder="Apellido">
 							</div>
 						</div>
 
 						<div class="row form-group">
 							<div class="col-md-12">
 								<!-- <label for="email">Email</label> -->
-								<input type="text" id="email" class="form-control" placeholder="Your email address">
+								<input type="text" id="email" class="form-control" placeholder="Email">
 							</div>
 						</div>
 
 						<div class="row form-group">
 							<div class="col-md-12">
 								<!-- <label for="subject">Subject</label> -->
-								<input type="text" id="subject" class="form-control" placeholder="Your subject of this message">
+								<input type="text" id="subject" class="form-control" placeholder="Su asunto">
 							</div>
 						</div>
 
 						<div class="row form-group">
 							<div class="col-md-12">
 								<!-- <label for="message">Message</label> -->
-								<textarea name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Say something about us"></textarea>
+								<textarea name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Escribenos"></textarea>
 							</div>
 						</div>
 						<div class="form-group">
-							<input type="submit" value="Send Message" class="btn btn-primary">
+							<input type="submit" value="Enviar Mensaje" class="btn btn-primary">
 						</div>
 
 					</form>		
@@ -196,8 +200,8 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Newsletter</h2>
-					<p>Just stay tune for our latest Product. Now you can subscribe</p>
+					<h2>Noticias</h2>
+					<p>Subscribite para recibir muestras de nuestros últimos trabajos y así pedir el tuyo</p>
 				</div>
 			</div>
 			<div class="row animate-box">
@@ -210,7 +214,7 @@
 							</div>
 						</div>
 						<div class="col-md-6 col-sm-6">
-							<button type="submit" class="btn btn-default btn-block">Subscribe</button>
+							<button type="submit" class="btn btn-default btn-block">Subscribete</button>
 						</div>
 					</form>
 				</div>
@@ -222,52 +226,51 @@
 		<div class="container">
 			<div class="row row-pb-md">
 				<div class="col-md-4 fh5co-widget">
-					<h3>Shop.</h3>
-					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
+					<h3>Tresdelab</h3>
+					<p>Somos una empresa joven apuntando hacia el futuro, ayudando a nuestros clientes a ver el mundo diferente.</p>
 				</div>
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
 					<ul class="fh5co-footer-links">
-						<li><a href="#">About</a></li>
-						<li><a href="#">Help</a></li>
-						<li><a href="#">Contact</a></li>
-						<li><a href="#">Terms</a></li>
-						<li><a href="#">Meetups</a></li>
+						<li><a href="nosotros.html">Nosotros</a></li>
+						<li><a href="clientes.html">Clientes</a></li>
+						<li><a href="servicios.html">Servicios</a></li>
+						<li><a href="contacto.html">Contacto</a></li>
+						<!li><!a href="#"><!Meetups<!/a><!/li>
 					</ul>
 				</div>
 
-				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
-					<ul class="fh5co-footer-links">
-						<li><a href="#">Shop</a></li>
-						<li><a href="#">Privacy</a></li>
-						<li><a href="#">Testimonials</a></li>
-						<li><a href="#">Handbook</a></li>
-						<li><a href="#">Held Desk</a></li>
-					</ul>
-				</div>
+				<!div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
+					<!ul class="fh5co-footer-links">
+						<!li><!a href="#"><!Shop<!/a><!/li>
+						<!li><!a href="#"><!Privacy<!/a><!/li>
+						<!li><!a href="#"><!Testimonials<!/a><!/li>
+						<!li><!a href="#"><!Handbook<!/a><!/li>
+						<!li><!a href="#"><!Held Desk<!/a><!/li>
+					<!/ul>
+				<!/div>
 
-				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
-					<ul class="fh5co-footer-links">
-						<li><a href="#">Find Designers</a></li>
-						<li><a href="#">Find Developers</a></li>
-						<li><a href="#">Teams</a></li>
-						<li><a href="#">Advertise</a></li>
-						<li><a href="#">API</a></li>
-					</ul>
-				</div>
+				<!div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
+					<!ul class="fh5co-footer-links">
+						<!li><!a href="#"><!Find Designers<!/a><!/li>
+						<!li><!a href="#"><!Find Developers<!/a><!/li>
+						<!li><!a href="#"><!Teams<!/a><!/li>
+						<!li><!a href="#"><!Advertise<!/a><!/li>
+						<!li><!a href="#"><!API<!/a><!/li>
+					<!/ul>
+				<!/div>
 			</div>
 
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
-						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://blog.gessato.com/" target="_blank">Gessato</a> &amp; <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
+						<small class="block">&copy; 2017 DATECRU HTML5. All Rights Reserved.</small> 
+						<small class="block">Designed by <a href="http://www.tresdelab.com/" target="_blank">DaTeCru & Tresdelab</a></small>
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
 							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
+							<li><a href="https://www.facebook.com/tresdelab"><i class="icon-facebook"></i></a></li>
+							<li><a href="https://www.instagram.com/tresdelab/"><i class="icon-instagram"></i></a></li>
 						</ul>
 					</p>
 				</div>
