--- a/contacto.html
+++ b/contacto.html
@@ -91,7 +91,7 @@
 							<a href="servicios.html">Servicios</a>
 							<ul class="dropdown">
 								<li><a href="#">Fotografia aerea</a></li>
-								<li><a href="#">Impresion 3D y Corte laser</a></li>
+								<li><a href="impresion.html">Impresion 3D y Corte laser</a></li>
 								<li><a href="#">Diseño de Paginas web</a></li>
 								
 							</ul>
@@ -144,7 +144,7 @@
 							<li class="address">Ciudad Juárez, Chihuahua,<br> México </li>
 							<li class="phone"><a href="tel://+526569623200">+52 656 962 3200</a></li>
 							<li class="email"><a href="mailto:tresdelab@covi-sas.com">tresdelab@covi-sas.com</a></li>
-							<li class="url"><a href="http://www.facebook.com/tresdelab">Tresdelab</a></li>
+							<li class="url"><i class="fa fa-facebook"></i><a href="http://www.facebook.com/tresdelab"> Chat en Vivo</a></li>
 						</ul>
 					</div>
 
