--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 							<a href="servicios.html">Servicios</a>
 							<ul class="dropdown">
 								<li><a href="#">Fotografia aerea</a></li>
-								<li><a href="#">Impresion 3D y Corte laser</a></li>
+								<li><a href="impresion.html">Impresion 3D y Corte laser</a></li>
 								<li><a href="#">Diseño de Paginas web</a></li>
 								
 							</ul>
@@ -332,7 +332,7 @@
 							<div class="item">
 								<div class="testimony-slide active text-center">
 									<figure>
-										<img src="images/img1.JPG" alt="user">
+										<img src="images/img1.jpg" alt="user">
 									</figure>
 									<span>Kimberly Castro, via <a href="https://www.instagram.com/tresdelab/" class="twitter">Instagram</a></span>
 									<blockquote>
@@ -343,7 +343,7 @@
 							<div class="item">
 								<div class="testimony-slide active text-center">
 									<figure>
-										<img src="images/img2.JPG" alt="user">
+										<img src="images/img2.jpg" alt="user">
 									</figure>
 									<span>Kimberly Castro, via <a href="https://www.instagram.com/tresdelab/" class="twitter">Instagram</a></span>
 									<blockquote>
@@ -354,7 +354,7 @@
 							<div class="item">
 								<div class="testimony-slide active text-center">
 									<figure>
-										<img src="images/img3.JPG" alt="user">
+										<img src="images/img3.jpg" alt="user">
 									</figure>
 									<span>Gerardo Manriquez, via <a href="https://www.instagram.com/tresdelab/" class="twitter">Instagram</a></span>
 									<blockquote>
