--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 		   						<!span class="price"><!$800<!/span>
 		   						<h2>Fotografía y Grabación Aérea</h2>
 		   						<p>El cielo es el limite ante los ojos del aguila, conoce nuestras tarifas y agenda con nosotros.</p>
-			   					<p><a href="single.html" class="btn btn-primary btn-outline btn-lg">Leer más...</a></p>
+			   					<p><a href="#" class="btn btn-primary btn-outline btn-lg">Leer más...</a></p>
 		   					</div>
 		   				</div>
 		   			</div>
@@ -143,7 +143,7 @@
 		   						<!span class="price"><!$530<!/span>
 		   						<h2>Impresión 3D y Corte Laser</h2>
 		   						<p>Dale alas a tu imaginación e imprime con nosotros, proximamente contaremos con grabado y corte laser.</p>
-			   					<p><a href="single.html" class="btn btn-primary btn-outline btn-lg">Leer más...</a></p>
+			   					<p><a href="impresion.html" class="btn btn-primary btn-outline btn-lg">Leer más...</a></p>
 		   					</div>
 		   				</div>
 		   			</div>
@@ -157,7 +157,7 @@
 		   						<!span class="price"><!$750<!/span>
 		   						<h2>Diseño de Paginas Web</h2>
 		   						<p>Te ayudamos a desarrollar el sitio web que necesitas, acomodandonos a tus necesidades</p>
-			   					<p><a href="single.html" class="btn btn-primary btn-outline btn-lg">Leer más...</a></p>
+			   					<p><a href="#" class="btn btn-primary btn-outline btn-lg">Leer más...</a></p>
 		   					</div>
 		   				</div>
 		   			</div>
@@ -188,7 +188,7 @@
 						</span>
 						<h3>Impresión 3D y Corte laser</h3>
 						<p>Envíanos tus diseños en los formatos soportados, espera tu cotización e imprime.</p>
-						<p><a href="#" class="btn btn-primary btn-outline">leer más...</a></p>
+						<p><a href="impresion.html" class="btn btn-primary btn-outline">leer más...</a></p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4 text-center">
