--- a/impresion.html
+++ b/impresion.html
@@ -51,37 +51,37 @@
 						<h2>Trabajos Recientes</h2>
 						<div class="row">
                             <article class="6u 12u$(xsmall) work-item">
-								<a href="images/impresiones/1.jpg" class="image fit thumb"><img src="images/impresiones/13.JPG" alt="" /></a>
+								<a href="images/impresiones/13.JPG" class="image fit thumb"><img src="images/impresiones/13.JPG" alt="" /></a>
 								<h3>Base adhesiva para GoPro</h3>
 								<p>by David Tenorio Cruz</p>
 							</article>
                             <article class="6u 12u$(xsmall) work-item">
-								<a href="images/impresiones/1.jpg" class="image fit thumb"><img src="images/impresiones/12.JPG" alt="" /></a>
+								<a href="images/impresiones/12.jpg" class="image fit thumb"><img src="images/impresiones/12.JPG" alt="" /></a>
 								<h3>Botella Cristalina</h3>
 								<p>by Gerardo Manriquez</p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="images/impresiones/2.jpg" class="image fit thumb"><img src="images/impresiones/11.JPG" alt="" /></a>
+								<a href="images/impresiones/11.JPG" class="image fit thumb"><img src="images/impresiones/11.JPG" alt="" /></a>
 								<h3>Molde para Helados</h3>
 								<p>by Kimberly Castro Ramirez</p>
 							</article>
 							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/impresiones/3.jpg" class="image fit thumb"><img src="images/impresiones/10.JPG" alt="" /></a>
+								<a href="images/impresiones/10.JPG" class="image fit thumb"><img src="images/impresiones/10.JPG" alt="" /></a>
 								<h3>Botella deportiva</h3>
 								<p>by Kimberly Castro Ramirez</p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="images/impresiones/4.jpg" class="image fit thumb"><img src="images/impresiones/9.JPG" alt="" /></a>
+								<a href="images/impresiones/9.JPG" class="image fit thumb"><img src="images/impresiones/9.JPG" alt="" /></a>
 								<h3>Grip para GoPro</h3>
 								<p>Download from <a href="https://www.thingiverse.com/">thingiverse</a></p>
 							</article>
 							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/impresiones/5.jpg" class="image fit thumb"><img src="images/impresiones/8.JPG" alt="" /></a>
+								<a href="images/impresiones/8.JPG" class="image fit thumb"><img src="images/impresiones/8.JPG" alt="" /></a>
 								<h3>Llavero forma Batman</h3>
 								<p>by Rubi Sanchez</p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="images/impresiones/6.jpg" class="image fit thumb"><img src="images/impresiones/7.JPG" alt="" /></a>
+								<a href="images/impresiones/7.JPG" class="image fit thumb"><img src="images/impresiones/7.JPG" alt="" /></a>
 								<h3>Molde de wonderwoman para Chocolate</h3>
 								<p>by Rubi Sanchez</p>
 							</article>
