--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 						<li class="has-dropdown">
 							<a href="servicios.html">Servicios</a>
 							<ul class="dropdown">
-								<li><a href="#">Fotografia aerea</a></li>
+								<li><a href="cdjdrones.html">Fotografia aerea</a></li>
 								<li><a href="impresion.html">Impresion 3D y Corte laser</a></li>
 								<li><a href="#">Diseño de Paginas web</a></li>
 								
@@ -129,7 +129,7 @@
 		   						<!span class="price"><!$800<!/span>
 		   						<h2>Fotografía y Grabación Aérea</h2>
 		   						<p>El cielo es el limite ante los ojos del aguila, conoce nuestras tarifas y agenda con nosotros.</p>
-			   					<p><a href="#" class="btn btn-primary btn-outline btn-lg">Leer más...</a></p>
+			   					<p><a href="cdjdrones.html" class="btn btn-primary btn-outline btn-lg">Leer más...</a></p>
 		   					</div>
 		   				</div>
 		   			</div>
@@ -178,7 +178,7 @@
 						</span>
 						<h3>Fotografía y Grabación Aérea</h3>
 						<p>Agenda tu cita con nosotros y admira el mundo con unas tomas sorprendentes desde los cielos.</p>
-						<p><a href="#" class="btn btn-primary btn-outline">leer más...</a></p>
+						<p><a href="cdjdrones.html" class="btn btn-primary btn-outline">leer más...</a></p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4 text-center">
