--- a/servicios.html
+++ b/servicios.html
@@ -89,7 +89,7 @@
 						<li class="has-dropdown">
 							<a href="servicios.html">Servicios</a>
 							<ul class="dropdown">
-								<li><a href="#">Fotografia aerea</a></li>
+								<li><a href="cdjdrones.html">Fotografia aerea</a></li>
 								<li><a href="impresion.html">Impresion 3D y Corte laser</a></li>
 								<li><a href="#">Diseño de Paginas web</a></li>
 								
@@ -142,7 +142,7 @@
 						</span>
 						<h3>Fotografía y Grabación Aérea</h3>
 						<p>Contamos con equipo para grabación de alta definición "1440p" y Fotografías 4K, además de pilotos con más de 10 años de experiencia para videos en las peores condiciones para volar</p>
-						<p><a href="#" class="btn btn-primary btn-outline">Leer más</a></p>
+						<p><a href="cdjdrones.html" class="btn btn-primary btn-outline">Leer más</a></p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4 text-center">
