--- a/cdjdrones.html
+++ b/cdjdrones.html
@@ -23,7 +23,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="image avatar"><img src="images/cdjdrones%20logo.png" alt="" /></a>
+				<a href="index.html" class="image avatar"><img src="images/cdjdrones.png" alt="" /></a>
 				<h1><p><strong>CDJDrones</strong> by tresdelab, agenda<br/> con nosotros tus video o<br />
                     fotografias aerea de alta calidad,<br /> ademas, tambien contamos con servicios<br/> de reparación y mantenimiento de drones.</p></h1>
                 
@@ -35,6 +35,7 @@
 
 				<!-- One -->
 					<section id="one">
+                        <div ><img src="images/cdjdrones.png" width="30%" heigth="30%" aling="left"></div>
 						<header class="major">
 							<h2>Agenda con nosotros<br />
 							 para tus videos o fotografia aerea</h2>
